--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           sudo apt-get install -y libcups2-dev
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r requirements_production.txt
           pip uninstall pycrypto -y
           pip install pycryptodome
           pip install flake8
