Update Flake8 linting setup and add new requirement
Updated the GitHub Actions workflow to run Flake8 linting on the potlako application instead of flourish_caregiver. Added a new .flake8 configuration file to define linting rules for the project. Specifically, specified a max-line-length of 90 and excluded certain files and directories from linting to make it more appropriate for Django projects. Also, updated the production requirements file to include potlako-reports. These changes improved code quality and added new functionality to the project.

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -30,7 +30,7 @@ jobs:
           pip install pycryptodome
           pip install flake8
       - name: Flake8 Lint
-        run: flake8 ${{ github.workspace }}/flourish_caregiver
+        run: flake8 ${{ github.workspace }}/potlako
       - name: Run Tests
         run: |
           python manage.py test
