--- a/requirements_production.txt
+++ b/requirements_production.txt
@@ -47,6 +47,7 @@ git+https://github.com/potlako-plus/potlako-validations.git@0.1.7#egg=potlako-va
 git+https://github.com/potlako-plus/potlako-visit-schedule.git@0.1.1#egg=potlako-visit-schedule
 git+https://github.com/potlako-plus/potlako-reference.git@0.1.2#egg=potlako-reference
 git+https://github.com/potlako-plus/potlako-rest-api.git@0.1.1#egg=potlako-rest-api
+git+https://github.com/potlako-plus/potlako-reports.git@0.1.2#egg=potlako-reports
 django-multiselectfield
 django-cors-headers
 django-crispy-forms
