Updated configuration to use environment variables
Configuration values in Django settings and Github Actions workflow are updated to use environment variables. Changes made to ensure sensitive data such as API keys and email configuration are not hard-coded. Instead, these are now fetched through environment variables to enhance security and portability of the application. Dockerfile is also updated to include the necessary environment variables from the host.

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -34,4 +34,20 @@ jobs:
       - name: Run Tests
         run: |
           python manage.py test
-        
+        env:
+          BASE_API_URL: ${{ secrets.BASE_API_URL }}
+          EMAIL_BACKEND: ${{ secrets.EMAIL_BACKEND }}
+          EMAIL_HOST: ${{ secrets.EMAIL_HOST }}
+          EMAIL_USE_TLS: ${{ secrets.EMAIL_USE_TLS }}
+          EMAIL_PORT: ${{ secrets.EMAIL_PORT }}
+          EMAIL_USER: ${{ secrets.EMAIL_USER }}
+          EMAIL_HOST_PASSWORD: ${{ secrets.EMAIL_HOST_PASSWORD }}
+          EVALUATION_TIMELINE: ${{ secrets.EVALUATION_TIMELINE }}
+          NAV_PLAN_API: ${{ secrets.NAV_PLAN_API }}
+          DEVICE_ID: ${{ secrets.DEVICE_ID }}
+          DEVICE_ROLE: ${{ secrets.DEVICE_ROLE }}
+          EDC_SYNC_SERVER_IP: ${{ secrets.EDC_SYNC_SERVER_IP }}
+          EDC_SYNC_FILES_REMOTE_HOST: ${{ secrets.EDC_SYNC_FILES_REMOTE_HOST }}
+          EDC_SYNC_FILES_USER: ${{ secrets.EDC_SYNC_FILES_USER }}
+          EDC_SYNC_FILES_USB_VOLUME: ${{ secrets.EDC_SYNC_FILES_USB_VOLUME }}
+
