Implemented Docker and revised MySQL settings
Docker configuration has been introduced and updated the settings related to the MySQL database. MySQL host and port are no longer fetched from the environment, but set as 'db' and '3306' respectively. The docker-compose.yml file has been added to manage application services. This modification aims to facilitate application deployment and its dependencies, ensuring consistent environments between development and production. Additionally, 'COMMUNITIES' has been updated to obtain a list from theHANCED_CARE' environment variable, promoting flexibility in configuration.

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -51,4 +51,5 @@ jobs:
           EDC_SYNC_FILES_REMOTE_HOST: ${{ secrets.EDC_SYNC_FILES_REMOTE_HOST }}
           EDC_SYNC_FILES_USER: ${{ secrets.EDC_SYNC_FILES_USER }}
           EDC_SYNC_FILES_USB_VOLUME: ${{ secrets.EDC_SYNC_FILES_USB_VOLUME }}
+          EDC_SYNC_FILES_REMOTE_MEDIA: ${{ secrets.EDC_SYNC_FILES_REMOTE_MEDIA }}
 
