Fix: Add Django 3.1.14 in the GitHub actions pipeline
A specific version of Django (3.1.14) has been added to the GitHub actions pipeline by updating django.yml. This ensures the project is built and tested against this specific version of Django, ensuring compatibility and reducing chances of runtime issues. Furthermore, it improves the reliability of our Continuous Integration/Continuous Deployment process.

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -30,6 +30,7 @@ jobs:
           pip uninstall pycryptodome -y
           pip install pycryptodome
           pip install flake8
+          pip install Django==3.1.14
       - name: Flake8 Lint
         run: flake8 ${{ github.workspace }}/potlako
       - name: Run Tests
