Fix: Add Django 3.1.14 in the GitHub actions pipeline
A specific version of Django (3.1.14) has been added to the GitHub actions pipeline by updating django.yml. This ensures the project is built and tested against this specific version of Django, ensuring compatibility and reducing chances of runtime issues. Furthermore, it improves the reliability of our Continuous Integration/Continuous Deployment process.

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -46,8 +46,8 @@ jobs:
           EMAIL_HOST_PASSWORD: ${{ secrets.EMAIL_HOST_PASSWORD }}
           EVALUATION_TIMELINE: ${{ secrets.EVALUATION_TIMELINE }}
           NAV_PLAN_API: ${{ secrets.NAV_PLAN_API }}
-          DEVICE_ID: ${{ secrets.DEVICE_ID }}
-          DEVICE_ROLE: ${{ secrets.DEVICE_ROLE }}
+          EDC_DEVICE_ID: ${{ secrets.EDC_DEVICE_ID }}
+          EDC_DEVICE_ROLE: ${{ secrets.EDC_DEVICE_ROLE }}
           EDC_SYNC_SERVER_IP: ${{ secrets.EDC_SYNC_SERVER_IP }}
           EDC_SYNC_FILES_REMOTE_HOST: ${{ secrets.EDC_SYNC_FILES_REMOTE_HOST }}
           EDC_SYNC_FILES_USER: ${{ secrets.EDC_SYNC_FILES_USER }}
