Add initial migrate command to test workflow
We added a command `python manage.py migrate edc_facility initial` to the test run part of the Github Workflow for our Django project. This will ensure that any necessary database migrations for the `edc_facility` module are performed before running the tests.

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -35,6 +35,7 @@ jobs:
         run: flake8 ${{ github.workspace }}/potlako
       - name: Run Tests
         run: |
+          python manage.py migrate edc_facility initial
           python manage.py test
         env:
           BASE_API_URL: ${{ secrets.BASE_API_URL }}
