--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -33,6 +33,11 @@ jobs:
           pip install Django==3.1.14
       - name: Flake8 Lint
         run: flake8 ${{ github.workspace }}/potlako
+      - name: Make a directory for the keys
+        run: mkdir -p /etc/potlako/crypto_fields
+      - name: Generate keys
+        run: |
+          python manage.py generate_crypto_fields_keys /etc/potlako/crypto_fields
       - name: Run Tests
         run: |
           python manage.py migrate edc_facility initial
