Add steps to generate keys in Django workflow
The current Django workflow for GitHub Actions lacked steps to generate cryptographic keys necessary for some tests. This commit enhances the workflow by adding commands to create a directory to hold crypto keys and generate these keys before running tests.

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -40,6 +40,8 @@ jobs:
           python manage.py generate_crypto_fields_keys /etc/potlako/crypto_fields
       - name: Set environment variable for key path
         run: echo "KEY_PATH=~/crypto_fields" >> $GITHUB_ENV
+      - name: Set environment variable for media path
+        run: echo "EDC_SYNC_FILES_REMOTE_MEDIA=~/media" >> $GITHUB_ENV
       - name: Run Tests
         run: |
           python manage.py migrate edc_facility initial
