--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -37,7 +37,7 @@ jobs:
         run: mkdir -p ~/crypto_fields
       - name: Generate keys
         run: |
-          python manage.py generate_crypto_fields_keys /etc/potlako/crypto_fields
+          python manage.py generate_crypto_fields_keys ~/crypto_fields
       - name: Set environment variable for key path
         run: echo "KEY_PATH=~/crypto_fields" >> $GITHUB_ENV
       - name: Set environment variable for media path
