Add steps to generate keys in Django workflow
The current Django workflow for GitHub Actions lacked steps to generate cryptographic keys necessary for some tests. This commit enhances the workflow by adding commands to create a directory to hold crypto keys and generate these keys before running tests.

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -33,11 +33,13 @@ jobs:
           pip install Django==3.1.14
       - name: Flake8 Lint
         run: flake8 ${{ github.workspace }}/potlako
+      - name: Create required directories
+        run: sudo mkdir -p /etc/potlako/django_crypto_fields
       - name: Create directory for keys
         run: mkdir -p ~/crypto_fields
       - name: Generate keys
         run: |
-          python manage.py generate_crypto_fields_keys ~/crypto_fields
+          python manage.py generate_crypto_fields_keys crypto_fields/
       - name: Set environment variable for key path
         run: echo "KEY_PATH=~/crypto_fields" >> $GITHUB_ENV
       - name: Set environment variable for media path
