Add steps to generate keys in Django workflow
The current Django workflow for GitHub Actions lacked steps to generate cryptographic keys necessary for some tests. This commit enhances the workflow by adding commands to create a directory to hold crypto keys and generate these keys before running tests.

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Flake8 Lint
         run: flake8 ${{ github.workspace }}/potlako
       - name: Create required directories
-        run: sudo mkdir -p /etc/potlako/django_crypto_fields
+        run: sudo mkdir -p /etc/potlako
       - name: Create directory for keys
         run: mkdir -p ~/crypto_fields
       - name: Generate keys
