Add steps to generate keys in Django workflow
The current Django workflow for GitHub Actions lacked steps to generate cryptographic keys necessary for some tests. This commit enhances the workflow by adding commands to create a directory to hold crypto keys and generate these keys before running tests.

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -45,7 +45,7 @@ jobs:
         run: echo "EDC_SYNC_FILES_REMOTE_MEDIA=~/media" >> $GITHUB_ENV
       - name: Run Tests
         run: |
-          python manage.py generate_crypto_fields_keys crypto_fields/
+          python manage.py generate_crypto_fields_keys ~/crypto_fields
           python manage.py migrate edc_facility initial
           python manage.py test
         env:
