"Updated GitHub CI/CD Workflow with MySQL Service
Refactored build workflow and added MySQL service on GitHub CI/CD. This enables consistent testing environment for each build. Workflow now also supports multiple Python versions (3.7, 3.8, 3.9) and the database connection details are defined as environment variables for flexibility and security."

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -54,6 +54,15 @@ jobs:
         run: echo "KEY_PATH=${HOME}/crypto_fields" >> $GITHUB_ENV
       - name: Set environment variable for media path
         run: echo "EDC_SYNC_FILES_REMOTE_MEDIA=${{ github.workspace }}/media" >> $GITHUB_ENV
+      - name: Wait for MySQL
+        run: |
+          until nc -z -v -w30 ${{ secrets.MYSQL_HOST }} 3306
+          do
+            echo "Waiting for database connection..."
+            sleep 2
+          done
+        env:
+          MYSQL_HOST: db
       - name: Run Tests
         run: |
           python manage.py migrate edc_facility initial
