"Updated GitHub CI/CD Workflow with MySQL Service
Refactored build workflow and added MySQL service on GitHub CI/CD. This enables consistent testing environment for each build. Workflow now also supports multiple Python versions (3.7, 3.8, 3.9) and the database connection details are defined as environment variables for flexibility and security."

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -56,7 +56,7 @@ jobs:
         run: echo "EDC_SYNC_FILES_REMOTE_MEDIA=${{ github.workspace }}/media" >> $GITHUB_ENV
       - name: Wait for MySQL
         run: |
-          until nc -z -v -w30 ${{ secrets.MYSQL_HOST }} 3306
+          until nc -z -v -w30 localhost 3306
           do
             echo "Waiting for database connection..."
             sleep 2
@@ -84,7 +84,7 @@ jobs:
           EDC_SYNC_FILES_USER: ${{ secrets.EDC_SYNC_FILES_USER }}
           EDC_SYNC_FILES_USB_VOLUME: ${{ secrets.EDC_SYNC_FILES_USB_VOLUME }}
           EDC_SYNC_FILES_REMOTE_MEDIA: ${{ secrets.EDC_SYNC_FILES_REMOTE_MEDIA }}
-          MYSQL_HOST: db
+          MYSQL_HOST: 'localhost'
           MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD }}
           MYSQL_DB_NAME: ${{ secrets.MYSQL_DB_NAME }}
           MYSQL_USER: ${{ secrets.MYSQL_USER }}
