--- a/requirements_production.txt
+++ b/requirements_production.txt
@@ -10,7 +10,7 @@ git+https://github.com/botswana-harvard/edc-consent.git@0.2.12#egg=edc-consent
 git+https://github.com/botswana-harvard/edc-data-manager.git@0.1.9#egg=edc-data-manager
 git+https://github.com/botswana-harvard/edc-dashboard.git@0.3.3#egg=edc-dashboard
 git+https://github.com/botswana-harvard/edc-device.git@0.2.7#egg=edc-device
-git+https://github.com/botswana-harvard/edc-facility.git@0.1.4#egg=edc-facility
+git+https://github.com/bhp-code-space/edc-facility.git@develop#egg=edc-facility
 git+https://github.com/botswana-harvard/edc-fieldsets.git@0.1.2#egg=edc-fieldsets
 git+https://github.com/botswana-harvard/edc-form-validators.git@0.1.3#egg=edc-form-validators
 git+https://github.com/botswana-harvard/edc-identifier.git@0.2.12#egg=edc-identifier
