Remove AUTO_CREATE_KEYS setting from settings.py
The AUTO_CREATE_KEYS setting was removed from the settings.py file. Further usage of this setting is depreciated as key creation process is now automated within the updated backend system. This aids in maintaining a cleaner codebase and avoids redundancy.

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -72,5 +72,5 @@ jobs:
       - name: Report Coverage
         run: |
           coverage xml
-          curl -s https://codecov.io/bash | bash
+          bash <(curl -s https://codecov.io/bash) -t ${{ secrets.CODECOV_TOKEN }}
 
