--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     strategy:
       max-parallel: 4
       matrix:
@@ -22,7 +22,9 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install Dependencies
         run: |
-          sudo apt-get install --fix-missing libcups2-dev
+          sudo apt-get update
+          sudo apt-get upgrade
+          sudo apt-get install -y libcups2-dev
           python -m pip install --upgrade pip
           pip install -r requirements_production.txt
           pip uninstall pycrypto -y
