--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -92,6 +92,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/potlako_image:${{ github.sha }}
 
