Create custom Dockerfile for database and modify workflow files
Created a custom Dockerfile for MySQL database to optimize and harmonize db configuration and security. Adjusted the potlako Django GitHub action workflow by removing the db service setup and adding a new job to build and push the Docker image to DockerHub. Also, Dockerfile was used in 'db' service in docker-compose.yml replacing the directly used image. These changes enable consistent database setup across various environments and secret variables management improvement.

--- a/Dockerfile.db 
+++ b/Dockerfile.db 
@@ -1,6 +1,12 @@
 # Using the mysql:5.7 image as base
 FROM mysql:5.7
 
+ARG MYSQL_HOST
+ARG MYSQL_ROOT_PASSWORD
+ARG MYSQL_DB_NAME
+ARG MYSQL_USER
+ARG MYSQL_PASSWORD
+
 # Set environment variables
 ENV MYSQL_ROOT_PASSWORD ${MYSQL_ROOT_PASSWORD}
 ENV MYSQL_DATABASE ${MYSQL_DB_NAME}
