Create custom Dockerfile for database and modify workflow files
Created a custom Dockerfile for MySQL database to optimize and harmonize db configuration and security. Adjusted the potlako Django GitHub action workflow by removing the db service setup and adding a new job to build and push the Docker image to DockerHub. Also, Dockerfile was used in 'db' service in docker-compose.yml replacing the directly used image. These changes enable consistent database setup across various environments and secret variables management improvement.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   db:
     build:
       context: .
-      dockerfile: Dockerfile.db
+      dockerfile: ./Dockerfile.db
     platform: linux/x86_64
     volumes:
       - mysql_data:/var/lib/mysql
