--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -75,9 +75,35 @@ jobs:
           coverage xml
           bash <(curl -s https://codecov.io/bash) -t ${{ secrets.CODECOV_TOKEN }}
 
-  build_and_push_to_dockerhub:
+  build_and_push_db_to_dockerhub:
     runs-on: ubuntu-latest
     needs: build
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          push: true
+          file: ${{ github.workspace }}/Dockerfile.db
+          tags: ${{ secrets.DOCKER_USERNAME }}/potlako_db_image:${{ github.sha }}
+          build-args: |
+            MYSQL_ROOT_PASSWORD=${{ secrets.MYSQL_ROOT_PASSWORD }}
+            MYSQL_DB_NAME=${{ secrets.MYSQL_DB_NAME }}
+            MYSQL_USER=${{ secrets.MYSQL_USER }}
+            MYSQL_PASSWORD=${{ secrets.MYSQL_PASSWORD }}
+
+  build_and_push_to_dockerhub:
+    runs-on: ubuntu-latest
+    needs: build_and_push_db_to_dockerhub
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -113,32 +139,6 @@ jobs:
             EDC_SYNC_FILES_USB_VOLUME=${{ secrets.EDC_SYNC_FILES_USB_VOLUME }}
             EDC_SYNC_FILES_REMOTE_MEDIA=${{ secrets.EDC_SYNC_FILES_REMOTE_MEDIA }}
             MYSQL_HOST=${{ secrets.MYSQL_HOST }}
-            MYSQL_ROOT_PASSWORD=${{ secrets.MYSQL_ROOT_PASSWORD }}
-            MYSQL_DB_NAME=${{ secrets.MYSQL_DB_NAME }}
-            MYSQL_USER=${{ secrets.MYSQL_USER }}
-            MYSQL_PASSWORD=${{ secrets.MYSQL_PASSWORD }}
-
-  build_and_push_db_to_dockerhub:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          platforms: linux/amd64,linux/arm64
-          push: true
-          file: ${{ github.workspace }}/Dockerfile.db
-          tags: ${{ secrets.DOCKER_USERNAME }}/potlako_db_image:${{ github.sha }}
-          build-args: |
             MYSQL_ROOT_PASSWORD=${{ secrets.MYSQL_ROOT_PASSWORD }}
             MYSQL_DB_NAME=${{ secrets.MYSQL_DB_NAME }}
             MYSQL_USER=${{ secrets.MYSQL_USER }}
