Create custom Dockerfile for database and modify workflow files
Created a custom Dockerfile for MySQL database to optimize and harmonize db configuration and security. Adjusted the potlako Django GitHub action workflow by removing the db service setup and adding a new job to build and push the Docker image to DockerHub. Also, Dockerfile was used in 'db' service in docker-compose.yml replacing the directly used image. These changes enable consistent database setup across various environments and secret variables management improvement.

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -90,10 +90,10 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
-          context: .
+          context: ${{ github.workspace }}
           platforms: linux/amd64,linux/arm64
           push: true
-          file: ${{ github.workspace }}/Dockerfile.db
+          file: ./Dockerfile.db
           tags: ${{ secrets.DOCKER_USERNAME }}/potlako_db_image:${{ github.sha }}
           build-args: |
             MYSQL_ROOT_PASSWORD=${{ secrets.MYSQL_ROOT_PASSWORD }}
