Create custom Dockerfile for database and modify workflow files
Created a custom Dockerfile for MySQL database to optimize and harmonize db configuration and security. Adjusted the potlako Django GitHub action workflow by removing the db service setup and adding a new job to build and push the Docker image to DockerHub. Also, Dockerfile was used in 'db' service in docker-compose.yml replacing the directly used image. These changes enable consistent database setup across various environments and secret variables management improvement.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,13 @@ version: "3.9"
 
 services:
   db:
-    build:
-      context: .
-      dockerfile: ./Dockerfile.db
+    image: mysql:5.7
     platform: linux/x86_64
     volumes:
       - mysql_data:/var/lib/mysql
       - ./mysql:/docker-entrypoint-initdb.d
+    env_file:
+      - ./.env
     environment:
       MYSQL_HOST: ${MYSQL_HOST}
       MYSQL_DB_PASSWORD: ${MYSQL_DB_PASSWORD}
@@ -22,7 +22,6 @@ services:
       interval: 20s
       timeout: 10s
       retries: 10
-
   web:
     build: .
     command: ["/bin/bash", "-c", "/app/mysql/db_restore.sh && ./wait_for_db.sh db ${MYSQL_USER} ${MYSQL_DB_PASSWORD} python manage.py runserver 0:8000"]
